--- a/blocks/footer/__copyright/footer__copyright.css
+++ b/blocks/footer/__copyright/footer__copyright.css
@@ -11,5 +11,7 @@
 @media screen and (max-width: 660px) {
   .footer__copyright{
     margin: 0 0 36px 19px;
+    font-size: 14px;
+    line-height: 17px;
   }
 }
