--- a/blocks/popup/__close-button/popup__close-button.css
+++ b/blocks/popup/__close-button/popup__close-button.css
@@ -7,8 +7,21 @@
   top: -42px;
   transition: opacity 0.2s linear;
   cursor: pointer;
+  background-image: url(../../../images/close-button.svg);
+  height: 32px;
+  width: 32px;
 }
 
 .popup__close-button:hover{
   opacity: 0.6
+}
+
+@media screen and (max-width: 660px) {
+  .popup__close-button{
+    right: -262px;
+    top: -36px;
+    height: 20px;
+    width: 20px;
+    background-size: contain;
+  }
 }
