--- a/blocks/popup/__form/popup__form.css
+++ b/blocks/popup/__form/popup__form.css
@@ -5,3 +5,10 @@
   border-radius: 10px;
   position: relative;
 }
+
+@media screen and (max-width: 660px) {
+  .popup__form{
+    max-width: 282px;
+    min-height: 322px;
+  }
+}
