--- a/blocks/popup/__title/popup__title.css
+++ b/blocks/popup/__title/popup__title.css
@@ -5,13 +5,13 @@
   font-size: 24px;
   line-height: 29px;
   color: #000000;
-  padding: 0 0 54px 36px;
+  padding: 34px 0 54px 36px;
   margin: 0;
 }
 
-@media screen and (max-width: 701px) {
+@media screen and (max-width: 770px) {
   .popup__title{
-    padding: 0 22px 75px 22px;
+    padding: 25px 22px 75px 22px;
     font-size: 18px;
     line-height: 22px;
   }
