--- a/blocks/profile/__img/profile__img.css
+++ b/blocks/profile/__img/profile__img.css
@@ -1,3 +1,11 @@
 .profile__img{
-  border-radius: inherit;
+  border-radius: 50%;
+  margin-right: 30px;
+}
+
+@media screen and (max-width: 770px) {
+  .profile__img{
+    margin-right: 0;
+    margin-bottom: 22px;
+  }
 }
