--- a/blocks/profile/__paragraph/profile__paragraph.css
+++ b/blocks/profile/__paragraph/profile__paragraph.css
@@ -6,13 +6,18 @@
   line-height: 22px;
   margin:0;
   color: #FFFFFF;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+  max-width: 350px;
 }
 
-@media screen and (max-width: 701px) {
+@media screen and (max-width: 770px) {
   .profile__paragraph{
     padding-bottom: 36px;
     font-size: 14px;
     line-height: 17px;
     text-align: center;
+    max-width: 298px;
   }
 }
