--- a/blocks/profile/__title/profile__title.css
+++ b/blocks/profile/__title/profile__title.css
@@ -7,13 +7,18 @@
   font-size: 42px;
   line-height: 48px;
   color: #FFFFFF;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+  max-width: 350px;
 }
 
-@media screen and (max-width: 701px) {
+@media screen and (max-width: 770px) {
   .profile__title{
     padding: 0 10px 14px 0;
     font-size: 27px;
     line-height: 33px;
     text-align: center;
+    max-width: 270px;
   }
 }
