--- a/blocks/popup/_opened/popup_opened.css
+++ b/blocks/popup/_opened/popup_opened.css
@@ -1,3 +1,6 @@
 .popup_opened{
-  display: block;
+  visibility: visible;
+  opacity: 1;
+  transition: visibility 0s linear, opacity 0.6s linear;
+  pointer-events: all;
 }
