--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -2,8 +2,11 @@
   position: fixed;
   top: 0;
   right: 0;
-  display: none;
+  visibility: hidden;
   max-width: none;
   width: 100vw;
   height: 100vh;
+  opacity: 0;
+  transition: visibility 0.6s linear, opacity 0.6s linear;
+  pointer-events: none;
 }
