fix: constant height of form-modal

--- a/src/blocks/popup/__form/popup__form.css
+++ b/src/blocks/popup/__form/popup__form.css
@@ -3,6 +3,8 @@
   min-height: 330px;
   background-color: #FFF;
   border-radius: 10px;
+  display: flex;
+  flex-direction: column;
 }
 
 @media screen and (max-width: 770px) {
