--- a/src/blocks/popup/__field/popup__field.css
+++ b/src/blocks/popup/__field/popup__field.css
@@ -1,6 +1,6 @@
 .popup__field{
   width: calc(430px - 36px*2);
-  margin: 0 36px 30px;
+  margin: auto 36px auto;
   font-family: 'Inter', Arial, sans-serif;
   font-style: normal;
   font-weight: 400;
