--- a/src/blocks/popup/__submit-button/popup__submit-button.css
+++ b/src/blocks/popup/__submit-button/popup__submit-button.css
@@ -1,5 +1,5 @@
 .popup__submit-button{
-  margin: 48px 36px 36px;
+  margin: auto 36px;
   width: 358px;
   height: 50px;
   background-color: black;
