--- a/src/blocks/popup/__title/popup__title.css
+++ b/src/blocks/popup/__title/popup__title.css
@@ -5,8 +5,8 @@
   font-size: 24px;
   line-height: 29px;
   color: #000000;
-  padding: 34px 0 54px 36px;
-  margin: 0;
+  padding: 34px 0 0 36px;
+  margin: 0 0 auto;
 }
 
 @media screen and (max-width: 770px) {
