--- a/src/blocks/profile/__img/profile__img.css
+++ b/src/blocks/profile/__img/profile__img.css
@@ -1,11 +1,16 @@
 .profile__img{
   border-radius: 50%;
-  margin-right: 30px;
+  margin-right: 4px;
+  max-width: 120px;
+  height: 120px;
+  object-fit: cover;
+  opacity: 1;
+  transition: opacity 0.3s linear;
 }
 
 @media screen and (max-width: 770px) {
   .profile__img{
     margin-right: 0;
-    margin-bottom: 22px;
+    margin-bottom: 0px;
   }
 }
