--- a/src/blocks/profile/__img/profile__img.css
+++ b/src/blocks/profile/__img/profile__img.css
@@ -1,7 +1,7 @@
 .profile__img{
   border-radius: 50%;
   margin-right: 4px;
-  max-width: 120px;
+  width: 120px;
   height: 120px;
   object-fit: cover;
   opacity: 1;
