--- a/src/blocks/place/__image/place__image.css
+++ b/src/blocks/place/__image/place__image.css
@@ -1,4 +1,9 @@
-.place__image{
+.place__image {
   width: 282px;
-  height: 282px;
+  aspect-ratio: 1/1;
+  border-radius: 10px 10px 0 0;
+  border: none;
+  object-fit: cover;
+  overflow: hidden;
+  cursor: pointer;
 }
