--- a/src/blocks/place/__image/place__image.css
+++ b/src/blocks/place/__image/place__image.css
@@ -1,6 +1,6 @@
 .place__image {
   width: 282px;
-  aspect-ratio: 1/1;
+  height: 282px;
   border-radius: 10px 10px 0 0;
   border: none;
   object-fit: cover;
